@@ -1,11 +1,17 @@
 package test.beforegroups;
 
+import java.util.Collections;
+import java.util.HashMap;
+import java.util.Map;
 import org.testng.TestListenerAdapter;
 import org.testng.TestNG;
 import org.testng.annotations.Test;
 import org.testng.collections.Lists;
 import org.testng.internal.ClassHelper;
 import org.testng.internal.PackageUtils;
+import org.testng.xml.XmlClass;
+import org.testng.xml.XmlGroups;
+import org.testng.xml.XmlRun;
 import org.testng.xml.XmlSuite;
 import org.testng.xml.XmlTest;
 import test.InvokedMethodNameListener;
@@ -16,6 +22,7 @@ import test.beforegroups.issue1694.BaseClassWithBeforeGroups;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.List;
+import test.beforegroups.issue346.SampleTestClass;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
@@ -41,6 +48,39 @@ public class BeforeGroupsTest extends SimpleBaseTest {
     assertThat(listener.getFailedTests()).isEmpty();
   }
 
+  @Test(description = "GITHUB-346")
+  public void ensureBeforeGroupsAreInvokedWhenCoupledWithAfterGroups() {
+    String TEST_1 = "A";
+    String TEST_2 = "B";
+
+    XmlSuite xmlSuite = new XmlSuite();
+    xmlSuite.setName("346_suite");
+    createXmlTest(xmlSuite, TEST_1, "A");
+    createXmlTest(xmlSuite, TEST_2, "B");
+    TestNG testng = new TestNG();
+    testng.setXmlSuites(Collections.singletonList(xmlSuite));
+    testng.run();
+    Map<String, List<String>> expected = new HashMap<>();
+    expected.put(TEST_1, Collections.singletonList("beforeGroups:" + TEST_1 + TEST_1));
+    expected.put(TEST_2, Collections.singletonList("afterGroups:" + TEST_2 + TEST_2));
+    assertThat(SampleTestClass.logs).isEqualTo(expected);
+  }
+
+  private static void createXmlTest(XmlSuite xmlSuite, String name, String group) {
+    XmlTest xmlTest = new XmlTest(xmlSuite);
+    xmlTest.setName(name);
+    xmlTest.setClasses(Collections.singletonList(new XmlClass(SampleTestClass.class)));
+    xmlTest.setGroups(groups(group));
+
+  }
+
+  private static XmlGroups groups(String group) {
+    XmlGroups xmlGroups = new XmlGroups();
+    XmlRun xmlRun = new XmlRun();
+    xmlRun.onInclude(group);
+    xmlGroups.setRun(xmlRun);
+    return xmlGroups;
+  }
   private static void runTest(XmlSuite.ParallelMode mode) throws IOException {
     XmlSuite suite = createXmlSuite("sample_suite");
     String pkg = BaseClassWithBeforeGroups.class.getPackage().getName();
